get_filename_component(CURRENT_DIR_NAME ${CMAKE_CURRENT_LIST_DIR} NAME)

project(${CURRENT_DIR_NAME})

file(GLOB_RECURSE src src/*.h src/*.cpp src/*.hpp src/*.c)

include_directories(
	"src" 
	"src/RTTR")

add_compile_definitions(${PROJECT_NAME}_PROJECT)

add_library(${PROJECT_NAME} SHARED  ${src})
add_executable(RTTRExample ${src})

# 寧땍욋돨渴놔츰냔
set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${PROJECT_NAME})

# 갛陋커깃뵨庫匡숭
install(TARGETS ${PROJECT_NAME}
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib
        RUNTIME DESTINATION bin)

install(DIRECTORY src/ DESTINATION include FILES_MATCHING PATTERN "*.h" PATTERN "*.hpp")
